--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "axios": "^0.27.2",
     "commonjs-variables-for-esmodules": "^1.1.0",
     "express": "^4.18.1",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "supervisor": "^0.12.0"
   },
   "devDependencies": {
     "eslint": "^6.0.0"
