--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "commonjs-variables-for-esmodules": "^1.1.0",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
+    "hbs": "^4.2.0",
     "lodash": "^4.17.21",
     "supervisor": "^0.12.0"
   },
