--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.27.2",
+    "body-parser": "^1.20.0",
     "commonjs-variables-for-esmodules": "^1.1.0",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
