--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.27.2",
     "body-parser": "^1.20.0",
     "commonjs-variables-for-esmodules": "^1.1.0",
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
     "hbs": "^4.2.0",
